<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/element_edit_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/element_edit_name_hint"
        android:inputType="text"
        android:maxLength="25" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/element_edit_coefficient"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/element_edit_coefficient"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/element_edit_coefficient_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/element_edit_coefficient_input"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:ems="25"
            android:inputType="number"
            android:text="@string/element_edit_coefficient_default_value"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>